--- a/app/src/main/res/layout/activity_nickname_setup.xml
+++ b/app/src/main/res/layout/activity_nickname_setup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -54,13 +55,14 @@
 
                         <!-- 제목 -->
                         <TextView
+                            android:id="@+id/nicknameTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/notosans_bold"
                             android:includeFontPadding="false"
                             android:text="닉네임 변경"
                             android:textColor="@color/text_primary"
-                            android:textSize="18sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <!-- 구분선 -->
@@ -107,7 +109,7 @@
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/nicknameEditText"
                                 android:layout_width="match_parent"
-                                android:layout_height="56dp"
+                                android:layout_height="50dp"
                                 android:fontFamily="@font/notosans_regular"
                                 android:includeFontPadding="false"
                                 android:inputType="text"
@@ -132,7 +134,7 @@
 
     <!-- 저장 버튼 -->
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnChangeNickname"
+        android:id="@+id/saveNicknameButton"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginStart="20dp"
@@ -146,6 +148,7 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         android:visibility="gone"
-        app:cornerRadius="16dp" />
+        app:cornerRadius="16dp"
+        tools:visibility="visible" />
 
 </LinearLayout>
