--- a/app/src/main/res/drawable/bg_title_badge.xml
+++ b/app/src/main/res/drawable/bg_title_badge.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="1dp"
-        android:color="@color/orange" /> <!-- 프로젝트의 colors.xml에 orange 색상이 정의되어 있어야 합니다. -->
-    <corners android:radius="12dp" />
-    <solid android:color="#18FF9800" /> <!-- 주황색의 10% 투명도 색상입니다. -->
+        android:width="0.5dp"
+        android:color="#40FFFFFF" /> <!-- 반투명 흰색 테두리 -->
+    <corners android:radius="20dp" />
+    <solid android:color="#26FF9020" /> <!-- 15% 투명도의 흰색 배경 -->
 </shape>
