--- a/app/src/main/res/drawable/selector_bg_slidable_btn.xml
+++ b/app/src/main/res/drawable/selector_bg_slidable_btn.xml
@@ -11,7 +11,7 @@
     <!-- 기본 상태 -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_soft_cream" />
+            <solid android:color="@color/transparent" />
             <corners android:radius="16dp" />
         </shape>
     </item>
