--- a/app/src/main/res/layout/navigation_bottom.xml
+++ b/app/src/main/res/layout/navigation_bottom.xml
@@ -6,8 +6,7 @@
     app:cardCornerRadius="28dp"
     app:cardElevation="12dp">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
