--- a/app/src/main/res/layout/toolbar_basic.xml
+++ b/app/src/main/res/layout/toolbar_basic.xml
@@ -63,5 +63,54 @@
             android:layout_width="40dp"
             android:layout_height="40dp" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/edit_button_card"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:outlineAmbientShadowColor="@color/transparent"
+            android:outlineSpotShadowColor="@color/transparent"
+            android:visibility="gone"
+            app:cardBackgroundColor="@color/transparent"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="6dp"
+            tools:targetApi="28"
+            tools:visibility="gone">
+
+            <!-- 뒤로가기 버튼 -->
+            <ImageButton
+                android:id="@+id/edit_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="수정"
+                android:src="@drawable/ic_pen"
+                app:tint="@color/text_primary" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/delete_button_card"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:outlineAmbientShadowColor="@color/transparent"
+            android:outlineSpotShadowColor="@color/transparent"
+            android:visibility="gone"
+            app:cardBackgroundColor="@color/transparent"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="6dp"
+            tools:targetApi="28"
+            tools:visibility="gone">
+
+            <!-- 뒤로가기 버튼 -->
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:alpha="0.7"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="삭제"
+                android:src="@drawable/ic_trash"
+                app:tint="@color/error" />
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 </androidx.appcompat.widget.Toolbar>
