--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -64,13 +64,13 @@
     <!-- ReviewListActivity의 탭 버튼(요약/리뷰) 스타일 -->
     <style name="ReviewListTabButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">36dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_margin">3dp</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">@font/notosans_bold</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/notosans_medium</item>
         <item name="android:textColor">@animator/btn_text_selector</item>
         <item name="android:background">@drawable/selector_bg_slidable_btn</item>
     </style>
